fix: suggested changes
- horizontal scroll table
- other quality of life improvements

--- a/ijr/public/css/ijr.css
+++ b/ijr/public/css/ijr.css
@@ -2,10 +2,10 @@
     --font-stack: Rubik, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --sl-font-sans: var(--font-stack);
 
-    --worst: var(--sl-color-green-100);
-    --middle: var(--sl-color-green-200);
-    --best: var(--sl-color-green-300);
-    --data-hover-color: var(--sl-color-green-500);
+    --worst: var(--sl-color-blue-100);
+    --middle: var(--sl-color-blue-300);
+    --best: var(--sl-color-blue-400);
+    --data-hover-color: var(--sl-color-blue-700);
 }
 
 html, body {
@@ -132,7 +132,6 @@ tr[data-state].highlight .rank-bar, tr[data-state]:hover .rank-bar {
 
 .featured-table {
     table-layout: fixed;
-    width: 100%;
     border-collapse: separate;
     font-size: 14px;
 }
